--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,10 @@ services:
       POSTGRES_INITDB_ARGS: "--encoding=UTF8"
     ports:
       - "5433:5432"
+    command: >
+      postgres
+      -c listen_addresses=*
+      -c max_connections=200
     volumes:
       - postgres_data:/var/lib/postgresql/data
       # - ./admin_telegram_backup.sql:/docker-entrypoint-initdb.d/init.sql
