--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,3 +14,8 @@ NODE_ENV=development
 
 # Frontend URL (comma-separated for multiple origins)
 FRONTEND_URL=http://localhost:5173,http://localhost:4000
+
+# Database Synchronization
+# Set to 'true' to enable automatic schema synchronization on app start
+# WARNING: Only use in development! Set to 'false' in production
+DB_SYNCHRONIZE=true
